.aws-sam/build/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: "\u667A\u6C47-ERP\u540E\u7AEF (zhihui-erp-backend)\n\u4E00\u4E2A\u4E3A\
  \u591A\u79DF\u6237ERP\u7CFB\u7EDF\u8BBE\u8BA1\u7684\u3001\u5305\u542B\u5B89\u5168\
  \u7F51\u7EDC\u73AF\u5883\u548C\u6B63\u786ELambda\u914D\u7F6E\u7684SAM\u6A21\u677F\
  \u3002\n"
Globals:
  Function:
    Timeout: 30
    MemorySize: 256
    Runtime: python3.11
    Architectures:
    - x86_64
Parameters:
  DBName:
    Type: String
    Default: jori_erp_db
    Description: "RDS PostgreSQL \u6570\u636E\u5E93\u7684\u540D\u79F0\u3002"
  DBUser:
    Type: String
    Default: postgres
    Description: "RDS \u6570\u636E\u5E93\u7684\u4E3B\u7528\u6237\u540D\u3002"
  DBPassword:
    Type: String
    Default: test1234
    NoEcho: true
    Description: "RDS \u6570\u636E\u5E93\u7684\u4E3B\u5BC6\u7801\u3002"
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: "\u667A\u6C47ERP-VPC"
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs: ''
      MapPublicIpOnLaunch: true
      Tags:
      - Key: Name
        Value: "\u667A\u6C47ERP-\u516C\u5171\u5B50\u7F51A"
  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs: ''
      Tags:
      - Key: Name
        Value: "\u667A\u6C47ERP-\u79C1\u6709\u5B50\u7F51A"
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: "\u667A\u6C47ERP-\u4E92\u8054\u7F51\u7F51\u5173"
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway
  NatGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - NatGatewayEIP
        - AllocationId
      SubnetId:
        Ref: PublicSubnetA
      Tags:
      - Key: Name
        Value: "\u667A\u6C47ERP-NAT\u7F51\u5173"
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: "\u667A\u6C47ERP-\u516C\u5171\u8DEF\u7531\u8868"
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId:
        Ref: InternetGateway
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: "\u667A\u6C47ERP-\u79C1\u6709\u8DEF\u7531\u8868"
  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId:
        Ref: NatGateway
  PublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnetA
      RouteTableId:
        Ref: PublicRouteTable
  PrivateSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnetA
      RouteTableId:
        Ref: PrivateRouteTable
  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "\u4E3A Lambda \u51FD\u6570\u8BBE\u8BA1\u7684\u5B89\u5168\u7EC4"
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: "\u667A\u6C47ERP-Lambda\u5B89\u5168\u7EC4"
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "\u4E3A RDS \u5B9E\u4F8B\u8BBE\u8BA1\u7684\u5B89\u5168\u7EC4"
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 5432
        ToPort: 5432
        SourceSecurityGroupId:
          Ref: LambdaSecurityGroup
      Tags:
      - Key: Name
        Value: "\u667A\u6C47ERP-Rds\u5B89\u5168\u7EC4"
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: "\u4E3A RDS \u8BBE\u8BA1\u7684\u5B50\u7F51\u7EC4"
      SubnetIds:
      - Ref: PrivateSubnetA
  DBInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName:
        Ref: DBName
      Engine: postgres
      EngineVersion: '15'
      DBInstanceClass: db.t3.micro
      AllocatedStorage: '20'
      MasterUsername:
        Ref: DBUser
      MasterUserPassword:
        Ref: DBPassword
      PubliclyAccessible: false
      VPCSecurityGroups:
      - Ref: RDSSecurityGroup
      DBSubnetGroupName:
        Ref: DBSubnetGroup
      Tags:
      - Key: Name
        Value: "\u667A\u6C47ERP-DB\u5B9E\u4F8B"
  SuperAdminSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: SuperAdminCredentials
      Description: "\u7528\u4E8EERP\u540E\u7AEF\u7684\u8D85\u7EA7\u7BA1\u7406\u5458\
        \u51ED\u8BC1"
      SecretString:
        Fn::Sub: '{"username": "superadmin", "password": "test1234"}'
  DatabaseUtilsLayer:
    Type: AWS::Serverless::LayerVersion
    Properties:
      LayerName: zhihui-erp-db-utils-layer
      Description: "\u63D0\u4F9B\u6570\u636E\u5E93\u8FDE\u63A5\u548C\u901A\u7528\u529F\
        \u80FD\u7684\u5171\u4EAB\u5DE5\u5177\u5C42"
      ContentUri: ../../backend/lambda/layers/database_utils
      CompatibleRuntimes:
      - python3.11
      RetentionPolicy: Retain
  DbSetupFunction:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: erp-db-setup-function
      CodeUri: DbSetupFunction
      Handler: db_setup.handler
      Policies:
      - VPCAccessPolicy: {}
      VpcConfig:
        SecurityGroupIds:
        - Ref: LambdaSecurityGroup
        SubnetIds:
        - Ref: PrivateSubnetA
      Environment:
        Variables:
          DB_HOST:
            Fn::GetAtt:
            - DBInstance
            - Endpoint.Address
          DB_PORT:
            Fn::GetAtt:
            - DBInstance
            - Endpoint.Port
          DB_NAME:
            Ref: DBName
          DB_USER:
            Ref: DBUser
          DB_PASSWORD:
            Ref: DBPassword
    Metadata:
      SamResourceId: DbSetupFunction
  AuthFunction:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: erp-auth-function
      CodeUri: AuthFunction
      Handler: auth.handler
      Layers:
      - Ref: DatabaseUtilsLayer
      Policies:
      - VPCAccessPolicy: {}
      - SecretsManagerReadWrite
      VpcConfig:
        SecurityGroupIds:
        - Ref: LambdaSecurityGroup
        SubnetIds:
        - Ref: PrivateSubnetA
      Environment:
        Variables:
          DB_HOST:
            Fn::GetAtt:
            - DBInstance
            - Endpoint.Address
          DB_PORT:
            Fn::GetAtt:
            - DBInstance
            - Endpoint.Port
          DB_NAME:
            Ref: DBName
          DB_USER:
            Ref: DBUser
          DB_PASSWORD:
            Ref: DBPassword
          JWT_SECRET: your_jwt_secret_here
          SUPER_ADMIN_SECRET_ARN:
            Ref: SuperAdminSecret
      Events:
        AuthApi:
          Type: Api
          Properties:
            Path: /auth/{proxy+}
            Method: ANY
    Metadata:
      SamResourceId: AuthFunction
  TenantsFunction:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: erp-tenants-function
      CodeUri: TenantsFunction
      Handler: tenants.handler
      Layers:
      - Ref: DatabaseUtilsLayer
      Policies:
      - VPCAccessPolicy: {}
      VpcConfig:
        SecurityGroupIds:
        - Ref: LambdaSecurityGroup
        SubnetIds:
        - Ref: PrivateSubnetA
      Environment:
        Variables:
          DB_HOST:
            Fn::GetAtt:
            - DBInstance
            - Endpoint.Address
          DB_PORT:
            Fn::GetAtt:
            - DBInstance
            - Endpoint.Port
          DB_NAME:
            Ref: DBName
          DB_USER:
            Ref: DBUser
          DB_PASSWORD:
            Ref: DBPassword
          JWT_SECRET: your_jwt_secret_here
      Events:
        TenantsApi:
          Type: Api
          Properties:
            Path: /tenants
            Method: ANY
    Metadata:
      SamResourceId: TenantsFunction
  UsersFunction:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: erp-users-function
      CodeUri: UsersFunction
      Handler: users.handler
      Layers:
      - Ref: DatabaseUtilsLayer
      Policies:
      - VPCAccessPolicy: {}
      VpcConfig:
        SecurityGroupIds:
        - Ref: LambdaSecurityGroup
        SubnetIds:
        - Ref: PrivateSubnetA
      Environment:
        Variables:
          DB_HOST:
            Fn::GetAtt:
            - DBInstance
            - Endpoint.Address
          DB_PORT:
            Fn::GetAtt:
            - DBInstance
            - Endpoint.Port
          DB_NAME:
            Ref: DBName
          DB_USER:
            Ref: DBUser
          DB_PASSWORD:
            Ref: DBPassword
          JWT_SECRET: your_jwt_secret_here
      Events:
        UsersApi:
          Type: Api
          Properties:
            Path: /users/{proxy+}
            Method: ANY
    Metadata:
      SamResourceId: UsersFunction
Outputs:
  ApiGatewayEndpoint:
    Description: "API \u7F51\u5173\u7684\u6839\u7EC8\u7AEF\u8282\u70B9 URL"
    Value:
      Fn::Sub: https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod
  DbSetupFunctionName:
    Description: "DbSetup Lambda \u51FD\u6570\u7684\u540D\u79F0"
    Value:
      Ref: DbSetupFunction
  DBEndpoint:
    Description: "RDS \u5B9E\u4F8B\u7684\u7EC8\u7AEF\u8282\u70B9\u5730\u5740"
    Value:
      Fn::GetAtt:
      - DBInstance
      - Endpoint.Address
